# universal_boot

./: .gitignore  LICENSE  README.md  go.sh  init.sh  init_2.sh  isos.py  multiboot.py  pyproject.toml  universal_boot.py
config/: grub.cfg
config/mp/: README.txt  theme.txt
templates/: antix.jinja2  arch.jinja2  bodhi.jinja2  debian-loop.jinja2  debian.jinja2  gentoo.jinja2  loopback.jinja2  mandriva.jinja2  manjaro.jinja2  mint.jinja2  mint2.jinja2  mxlinux.jinja2  opensuse.jinja2  pop.jinja2  puppy.jinja2  reactos.jinja2  redhat.jinja2  sparky.jinja2  tails.jinja2  vanillaos.jinja2  zorin.jinja2
