[tool.poetry]
name = "universal_boot"
version = "1.0.0"
description = "Universal Boot Loader for Linux distros"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.14"
pgpy = "^0.6.0"
jinja2 = "^3.1.6"
tqdm = "^4.67.1"
pycurl = "^7.45.6"
whiptail-dialogs = "^0.4.1"
psutil = "^7.0.0"
whiptail = "^0.2"
rainbow-tqdm = "^0.1.5"
rsyncwrap = "^0.1.1"

